--- a/src/index.liquid
+++ b/src/index.liquid
@@ -34,17 +34,8 @@ layout: 'base.liquid'
         <h5>Welcome</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
         <p>
-          <a class="frame-btn" href="#featured-articles">
-            <span class="frame-btn__outline frame-btn__outline--tall">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__outline frame-btn__outline--flat">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__solid"></span>
-            <span class="frame-btn__text">Featured Articles</span>
+          <a class="gradient-btn" href="#featured-articles">
+           Featured Articles
           </a>
         </p>
       </div>
@@ -58,17 +49,8 @@ layout: 'base.liquid'
         <h5>News & Blog</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
         <p>
-          <a class="frame-btn" href="/blog/">
-            <span class="frame-btn__outline frame-btn__outline--tall">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__outline frame-btn__outline--flat">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__solid"></span>
-            <span class="frame-btn__text">Learn More</span>
+          <a class="gradient-btn" href="/blog/">
+        Learn More
           </a>
         </p>
       </div>
@@ -82,17 +64,8 @@ layout: 'base.liquid'
         <h5>Games</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
         <p>
-          <a class="frame-btn" href="/games/">
-            <span class="frame-btn__outline frame-btn__outline--tall">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__outline frame-btn__outline--flat">
-              <span class="frame-btn__line frame-btn__line--tall"></span>
-              <span class="frame-btn__line frame-btn__line--flat"></span>
-            </span>
-            <span class="frame-btn__solid"></span>
-            <span class="frame-btn__text">Learn More</span>
+          <a class="gradient-btn" href="/games/">
+           Learn More
           </a>
         </p>
       </div>
