--- a/src/style.css
+++ b/src/style.css
@@ -283,7 +283,7 @@ section,
   }
   .carousel-caption p {
     width: 100%;
-    line-height: 1.6;
+    line-height: 3;
     font-size: 12px;
   }
 }
@@ -392,48 +392,7 @@ section,
   }
 }
 
-/* Game Table */
-
-tr.link-row a:hover {
-  color: #e51a38 ;
-  text-decoration: underline;
-  
-}
-
-tr.link-row a {
-  color: white ;
-  text-decoration: underline;
-
-}
-
-.btn-link-row {
-  background-color: #e51a38 !important;
-  color: #fff;
-  border-color: #e51a38;
-  
-}
-
-.btn-link-row:hover, .btn-link-row a:hover {
-  background-color: #fff !important;
-  color: #e51a38 !important;
-  border-color: #fff;
-}
-
-/* Scroll to Top */
-
-.btn-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 9999;
-}
-
-.btn-inv {
-  color: var(--clr-neutral-100);
-}
-
-
-/* ////Buttons///// */
+/*/// BUTTONS ///*/
 
 .btn-primary, .btn-primary:visited {
   background-color: #e51a38 !important;
@@ -494,144 +453,14 @@ color: #e51a38;
   background-position: 99% 50%;
 }
 
-
-.frame-btn {
-  margin-top: 50px;
-  line-height: 10px;
-  display: inline-block;
-  padding: 25px 20px;
-  font-size: 10px;
-  letter-spacing: 3px;
-  text-decoration: none;
-  align-self: start;
-  justify-self: start;
-  position: relative;
-}
-
-.frame-btn__text {
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition: 300ms ease;
-  position: relative;
-}
-
-.frame-btn:hover .frame-btn__text {
-  color: white;
-}
-
-.frame-btn__solid {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 10px;
-  background-color: var(--clr-primary-500);
-  width: calc(100% - (5px * 4));
-  height: calc(100% - (5px * 4));
-  transform-origin: 50%;
-  transform: scale(0.85);
-  opacity: 0;
-  transition: 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.frame-btn:hover .frame-btn__solid {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.frame-btn__outline {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.frame-btn__outline--tall {
-  margin: 0 5px;
-  width: calc(100% - (5px * 2));
-  height: 100%;
-}
-
-.frame-btn__outline--flat {
-  margin: 5px 0;
-  height: calc(100% - (5px * 2));
-  width: 100%;
-}
-
-.frame-btn__line {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.frame-btn__line--tall:before, .frame-btn__line--tall:after {
-  height: 100%;
-  width: 1px;
-  top: 0;
-}
-
-.frame-btn:hover .frame-btn__outline--flat .frame-btn__line--tall:before, .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--tall:after {
-  transform: scaleY(0);
-}
-
-.frame-btn:hover .frame-btn__outline--tall .frame-btn__line--tall:before, .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--tall:after {
-  margin: 5px 0;
-  height: calc(100% - (5px * 2));
-}
-
-.frame-btn__line--tall:before {
-  left: 0;
-}
-
-.frame-btn__line--tall:after {
-  right: 0;
-}
-
-.frame-btn__line--flat:before, .frame-btn__line--flat:after {
-  width: 100%;
-  height: 1px;
-  left: 0;
-}
-
-.frame-btn:hover .frame-btn__outline--tall .frame-btn__line--flat:before, .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--flat:after {
-  transform: scaleX(0);
-}
-
-.frame-btn:hover .frame-btn__outline--flat .frame-btn__line--flat:before, .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--flat:after {
-  margin: 0 5px;
-  width: calc(100% - (5px * 2));
-}
-
-.frame-btn__line--flat:before {
-  top: 0;
-}
-
-.frame-btn__line--flat:after {
-  bottom: 0;
-}
-
-.frame-btn__line:before, .frame-btn__line:after {
-  content: "";
-  display: block;
-  position: absolute;
-  background-color: var(--clr-primary-500);
-  transition: 800ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.frame-btn:hover .frame-btn__line:before, .frame-btn:hover .frame-btn__line:after {
-  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
 .neon-button {
-  font-size: 1.8rem;
-  font-family: 'Yellowtail', cursive;
+  font-size: 1.3rem;
+  font-family: 'Silkscreen', cursive !important;
   display: inline-block;
   cursor: pointer;
   text-decoration: none;
   color: #fff;
   padding: 0.25em 1em;
-  /*border-radius: 80% 20% 70% 30% / 30% 40% 60% 70%;*/
   text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.3), 0 0 0.45em currentColor;
   position: relative;
 }
@@ -646,7 +475,7 @@ color: #e51a38;
   margin-left: 5em;
 }
 
-/*Game Landing*/
+/*/// COLLECTIONS - GAME LANDING ///*/
 
 .collections{
   padding-bottom: 3em;
@@ -662,10 +491,6 @@ color: #e51a38;
   margin-bottom: 2rem;
 }
 
-.table, .table:link {
-  color: #fff !important;
-}
-
 .game-link {
   text-decoration: none;
 }
@@ -674,7 +499,55 @@ color: #e51a38;
   margin: auto;
 }
 
-/* Game List Page */
+/* Table */
+
+.table, .table:link {
+  color: #fff !important;
+}
+
+.title-link {
+  text-decoration: underline;
+}
+
+tr.link-row a:hover {
+  color: #e51a38 ;
+  text-decoration: none;
+  
+}
+
+tr.link-row a {
+  color: white ;
+  text-decoration: none;
+
+}
+
+.btn-link-row {
+  background-color: #e51a38 !important;
+  color: #fff;
+  border-color: #e51a38;
+  text-decoration: none;
+}
+
+.btn-link-row:hover, .btn-link-row a:hover {
+  background-color: #fff !important;
+  color: #e51a38 !important;
+  border-color: #fff;
+}
+
+/* Scroll to Top */
+
+.btn-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+.btn-inv {
+  color: var(--clr-neutral-100);
+}
+
+/*/// INDIVIDUAL GAME PAGES ///*/
 
 .custom-drk {
   background-color:hsla(0, 0%, 5%, 1);
@@ -686,7 +559,7 @@ color: #e51a38;
 
 .name-and-author{
   text-align: center;
-  line-height: 2.5em;
+  line-height: 2.75em;
 }
 
 .game-name {
@@ -716,13 +589,13 @@ iframe {
   max-width: 100%;
 }
 
-/* Blog */
+/*/// BLOG ///*/
 
 .blog-heading {
   margin-bottom: 1em;
 }
 
-/* About Us */
+/*/// ABOUT US ///*/
 
 .column-1 {
   margin-top: 2.75em;
