games list and data update

--- a/src/games.liquid
+++ b/src/games.liquid
@@ -41,7 +41,7 @@ alias: game
               <td>{{ game.environment }}</td>
               <td>
                 <button class="btn-link-row">
-                  <a href="/public/browser_games/{{ game.filename }}.html" download>Download</a>
+                  <a href="{{ game.link }}" download>Download</a>
                 </button>
               </td>
             </tr>
