--- a/src/games.liquid
+++ b/src/games.liquid
@@ -18,25 +18,25 @@ alias: game
       <br>
     </div>
 
-    <!--Bootstrap 5.0 Cards
+    <!--Bootstrap 5.0 Cards-->
 
-                <td>Developer: {{ game.developer }}</td>
-                <td>Date: {{ game.datesubmitted }}</td>
-                <td>Environment: {{ game.environment }}</td>
-
-        -->
         <table id="gameTableBody" class="table">
         <div class="row">
-          {% for game in games %}
+          {%- for game in games reversed -%}
+
            <div class="col-md-4">
               <div class="card bg-dark border-dark">
                 <div class="card-body">
               <a href="/games/{{ game.title | slugify }}-{{ game.developer | slugify }}.html" class="game-link">
               <h5 class="card-title">{{ game.title }}</h5>
               </a>
-                <p class="card-text">by {{ game.developer }} </p>
-                <p class="card-text"> {{ game.datesubmitted }} </p>
-                <p class="card-text"> {{ game.environment }} </p>
+              
+                <p class="card-text">{{ game.developer }} </p>
+
+                <p class="card-text">{{ game.datesubmitted}} </p>
+                
+                <p class="card-text">{{ game.environment }} </p>
+
               <a href="/public/browser_games/{{ game.filename }}.html" download class="gradient-btn">Download</a>
                 </div>
              </div>
