--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -28,6 +28,9 @@
                 <a href="/games/" class="nav-link">Games</a>
               </li>
               <li class="nav-item">
+                <a href="/reviews/" class="nav-link">Reviews</a>
+              </li>
+              <li class="nav-item">
                 <a href="/blog/" class="nav-link">Blog</a>
               </li>
               <li class="nav-item">
