--- a/src/style.css
+++ b/src/style.css
@@ -492,8 +492,14 @@ color: #e51a38;
 }
 
 .game-link {
-  text-decoration: none;
+  display: inline-block;
+  position: relative;
   color: #e51a38;
+  text-decoration: none;
+}
+
+.game-link:hover{
+  text-decoration: underline;
 }
 
 .center-heading {
@@ -505,6 +511,7 @@ color: #e51a38;
 .card {
   margin: .5em;
 }
+
 
 /* Table */
 
@@ -567,6 +574,7 @@ tr.link-row a {
 .name-and-author{
   text-align: center;
   line-height: 2.75em;
+  margin-top: 1em;
 }
 
 .game-name {
@@ -574,6 +582,12 @@ tr.link-row a {
   font-family: 'Silkscreen', cursive !important;
 }
 
+.description-container {
+  max-width: 750px;
+  text-indent: 20px;
+  margin: 0 auto;
+  margin-bottom: 5em;
+}
 
 .description {
   margin-top: 1em;
@@ -584,10 +598,13 @@ tr.link-row a {
 
 .iframe-container {
   position: relative;
-  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-iframe {
+.iframe-container iframe{
   display: block;
   border: 2px solid var(--clr-primary-500);
   margin: 0 auto;
@@ -668,3 +685,26 @@ iframe {
    }
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 1em;
+}
+
+.grid-item {
+  padding: 2em;
+  /*background-color: #eee;*/
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  margin-top: 2em;
+}
+
+.yt-iframe {
+  width: 500px;
+  height: 500px;
+}
+
+.yt-title {
+  margin-top: 1em;
+}
