--- a/src/games_list.liquid
+++ b/src/games_list.liquid
@@ -31,7 +31,7 @@ permalink: "/games/{{ game.title | slugify }}-{{ game.developer | slugify }}.htm
         <br>
         <br>
         Course:
-        {{ game.course}}
+        {{ game.class}}
       </p> 
     </div>
     <div class="text-center">
