YT Review Page w/css change on game landing

--- a/src/games.liquid
+++ b/src/games.liquid
@@ -1,18 +1,12 @@
 ---
-layout: base.liquid  
+layout: base.liquid
 title: Games
 data: games
 alias: game
 ---
-<button class="scrollToTopBtn">
-  <a href="#top" class="showBtn"><img
-      src="../assets/img/white-arrow.png"
-      width="40%"
-      height="40%"></a>
-</button>
 <section class="landing">
   <h2 class="text-center">- Collections -</h2>
-  <div class="container row list collections">
+  <div class="container row">
     <div class="col-md-4">
       <input
         type="text"
@@ -21,9 +15,31 @@ alias: game
         onkeyup="searchTable()"
         placeholder="Search...">
       <br>
+      <button id="toggleViewBtn" onclick="toggleView()" class="gradient-btn-ii">List View</button>
     </div>
+
+<!-- CARDS -->
+
+    <div id="cardContainer">
     <div class="col-md-12">
-      <table id="gameTableBody" class="table">
+      <div id="cardGridView" class="card-grid">
+        {% for game in games | slice: 2, 6 %}
+          <div class="card">
+            <a href="/games/{{ game.title | slugify }}-{{ game.developer | slugify }}.html" class="game-link">
+              {{ game.title }}
+            </a>
+          <p>Developer: {{ game.developer }}
+              <br>
+              Date: {{ game.datesubmitted }}
+              <br>
+              Environment: {{ game.environment }}</p>
+            <a href="{{ game.link }}" target="_blank">
+              <button class="btn-link-row">Download</button>
+            </a>
+          </div>
+        {% endfor %}
+      </div>
+      <table id="gameTableView" class="table">
         <thead>
           <tr>
             <th>Title</th>
@@ -45,21 +61,58 @@ alias: game
               <td>{{ game.datesubmitted }}</td>
               <td>{{ game.environment }}</td>
               <td>
-                <button class="btn-link-row">
-                  <a href="{{ game.link }}" target="_blank">Download</a>
-                </button>
+                <a href="{{ game.link }}" target="_blank">
+                  <button class="btn-link-row">Download</button>
+                </a>
               </td>
             </tr>
           {% endfor %}
-          </div>
-          </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 </section>
 
-<!--  Search bar script -->
+<button class="scrollToTopBtn">
+  <a href="#top" class="showBtn">
+    <img
+      src="../assets/img/white-arrow.png"
+      width="40%"
+      height="40%">
+  </a>
+</button>
+
+<nav aria-label="Page navigation">
+<ul class="pagination custom-pagination justify-content-center">
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li>
+    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+</ul>
+</nav>
+
+<!-- Search bar script -->
 <script>
   function searchTable() {
     var input,
       filter,
+      cardGrid,
+      card,
+      cardTitle,
+      cardDeveloper,
+      cardTable,
       table,
       tr,
       td,
@@ -69,25 +122,65 @@ alias: game
 
     input = document.getElementById("searchInput");
     filter = input.value.toUpperCase();
-    table = document.getElementById("gameTableBody");
-    tr = table.getElementsByTagName("tr");
+    cardGrid = document.getElementById("cardGridView");
+    card = cardGrid.getElementsByClassName("card");
+    cardTable = document.getElementById("gameTableView");
+    table = cardTable.getElementsByTagName("tr");
     rowCount = 0;
 
-// Loop through all table rows, and hide those that don't match the search query
-    for (i = 0; i < tr.length; i++) {
-      td = tr[i].getElementsByTagName("td");
+// Loop through card grid and hide/show cards based on search query
+    for (i = 0; i < card.length; i++) {
+      cardTitle = card[i].querySelector(".game-link");
+      cardDeveloper = card[i].querySelector("p:nth-child(2)");
+      txtValue = cardTitle.textContent || cardTitle.innerText;
+      txtValue += cardDeveloper.textContent || cardDeveloper.innerText;
+
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        card[i].style.display = "";
+      } else {
+        card[i].style.display = "none";
+      }
+    }
+
+// Loop through table rows and hide/show rows based on search query
+    for (i = 0; i < table.length; i++) {
+      td = table[i].getElementsByTagName("td");
       for (var j = 0; j < td.length; j++) {
         if (td[j]) {
           txtValue = td[j].textContent || td[j].innerText;
           if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            tr[i].style.display = "";
+            table[i].style.display = "";
             rowCount++;
             break;
           } else {
-            tr[i].style.display = "none";
+            table[i].style.display = "none";
           }
         }
       }
     }
+
+// Show "No results" message if no matching rows or cards found
+    var noResultsMsg = document.getElementById("noResultsMsg");
+    if (rowCount === 0) {
+      noResultsMsg.style.display = "block";
+    } else {
+      noResultsMsg.style.display = "none";
+    }
+  }
+
+  function toggleView() {
+    var cardGridView = document.getElementById("cardGridView");
+    var tableView = document.getElementById("gameTableView");
+    var toggleBtn = document.getElementById("toggleViewBtn");
+    if (cardGridView.style.display === "none") {
+      cardGridView.style.display = "grid";
+      tableView.style.display = "none";
+      toggleBtn.innerText = "List View";
+    } else {
+      cardGridView.style.display = "none";
+      tableView.style.display = "table";
+      toggleBtn.innerText = "Card Grid";
+    }
   }
 </script>
+
