--- a/src/reviews.liquid
+++ b/src/reviews.liquid
@@ -4,41 +4,78 @@ layout: 'base.liquid'
 ---
 <section class="landing">
 
-<!-- <h2 class="text-center">Reviews</h2> -->
-<div class="grid-container">
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video1" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 1</h3>
+<h2 class="yt-heading text-center">- YouTube Reviews -</h2>
+<div class="review-container">
+    <div class="review-card">
+        <img src="/assets/img/landscape-1.jpg">
+        <h2>Review 1</h2>
+        <p>Description of Review 1</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+    <img src="/assets/img/landscape-2.jpg">
+        <h2>Review 2</h2>
+        <p>Description of Review 2</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+        <img src="/assets/img/landscape-1.jpg">
+        <h2>Review 3</h2>
+        <p>Description of Review 3</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+    <img src="/assets/img/landscape-2.jpg">
+        <h2>Review 4</h2>
+        <p>Description of Review 4</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
 </div>
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video2" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 2</h3>
+<div class="review-container">
+    <div class="review-card">
+        <img src="/assets/img/landscape-1.jpg">
+        <h2>Review 5</h2>
+        <p>Description of Review 5</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+    <img src="/assets/img/landscape-2.jpg">
+        <h2>Review 6</h2>
+        <p>Description of Review 6</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+        <img src="/assets/img/landscape-1.jpg">
+        <h2>Review 7</h2>
+        <p>Description of Review 7</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
+    <div class="review-card">
+    <img src="/assets/img/landscape-2.jpg">
+        <h2>Review 8</h2>
+        <p>Description of Review 8</p>
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID">Watch on YouTube</a>
+    </div>
 </div>
-<div class="grid-item">
-  <iframe class="yt-iframe"  src="https://www.youtube.com/embed/video3" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 3</h3>
-</div>
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video4" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 4</h3>
-</div>
-</div>
-<div class="grid-container">
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video1" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 5</h3>
-</div>
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video2" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 6</h3>
-</div>
-<div class="grid-item">
-  <iframe class="yt-iframe"  src="https://www.youtube.com/embed/video3" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 7</h3>
-</div>
-<div class="grid-item">
-  <iframe class="yt-iframe" width="560" height="315" src="https://www.youtube.com/embed/video4" frameborder="0" allowfullscreen></iframe>
-  <h3 class="yt-title">Video Title 8</h3>
-</div>
-</div>
+<nav aria-label="Page navigation">
+<ul class="pagination custom-pagination justify-content-center">
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li>
+    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+</ul>
+</nav>
 </section>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
