--- a/src/games.liquid
+++ b/src/games.liquid
@@ -74,34 +74,7 @@ alias: game
 </div>
 </section>
 
-<button class="scrollToTopBtn">
-  <a href="#top" class="showBtn">
-    <img
-      src="../assets/img/white-arrow.png"
-      width="40%"
-      height="40%">
-  </a>
-</button>
-
-<nav aria-label="Page navigation">
-<ul class="pagination custom-pagination justify-content-center">
-    <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-        </a>
-    </li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-        </a>
-    </li>
-</ul>
-</nav>
+<button id="scrollToTopBtn" title="Scroll to Top">Top</button>
 
 <!-- Search bar script -->
 <script>
@@ -184,3 +157,19 @@ alias: game
   }
 </script>
 
+<script>
+
+window.addEventListener('scroll', function() {
+  var scrollToTopBtn = document.getElementById('scrollToTopBtn');
+  if (window.pageYOffset > 100) {
+    scrollToTopBtn.style.display = 'block';
+  } else {
+    scrollToTopBtn.style.display = 'none';
+  }
+});
+
+document.getElementById('scrollToTopBtn').addEventListener('click', function() {
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+});
+
+</script>
